fixed header overflow styling

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ Author URI: https://github.com/ericbai
 GitHub Theme URI: https://github.com/ericbai/dfh-wordpress-theme
 Release Asset: true
 Description: Theme for the Docs for Health website
-Version: 0.0.11
+Version: 0.0.12
 License: Apache-2.0
 License URI: https://www.apache.org/licenses/LICENSE-2.0.txt
 Text Domain: dfh
@@ -605,6 +605,7 @@ img {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-shrink: 0.5;
     height: 5rem; }
   .nav .nav__logo-container img {
     width: 14rem;
@@ -659,17 +660,23 @@ img {
       .nav__menu-toggle {
         display: none; }
       .nav__links-container {
-        display: block !important; }
+        display: block !important;
+        min-width: 0; }
       .nav__links {
         flex-direction: row;
-        padding: 0; }
+        padding: 0;
+        margin-left: 1.5rem; }
         .nav__links:before {
           display: none; }
         .nav__links > * {
+          min-width: 0;
           margin-right: 1rem; }
           .nav__links > *:last-child {
             margin-right: 0; }
         .nav__links .menu-item a {
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis;
           position: relative;
           font-weight: 400; }
           .nav__links .menu-item a, .nav__links .menu-item a:hover, .nav__links .menu-item a:focus, .nav__links .menu-item a:active {
